ADD: I wrote commit in the html.

--- a/index-cv.html
+++ b/index-cv.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-
+<!--comienza  el head para que lo lea el ordenador-->
 <head>
   <title>CV-Franco-Baldassare</title>
   <meta charset="utf-8">
 </head>
 
+<!--Comienza el body, esto será leído por el usuario-->
 <body>
 
 </body>
