ADD: I wrote in the CV my personal information.

--- a/index-cv.html
+++ b/index-cv.html
@@ -8,6 +8,14 @@
 
 <!--Comienza el body, esto será leído por el usuario-->
 <body>
+	<h1>Curriculum Vitae</h1>
+
+	<h2>Datos Personales</h2>
+	<p>Franco Matías Baldassare Rodríguez</p>
+	<p>francobaldassarerodriguez@gmail.com</p>
+	<p>+56933765766</p>
+	<p>Amansia 1450, Jardín del Mar, Viña del Mar, Valparaíso, Chile.</p>
+	<p>17.353.208-3</p>
 
 </body>
 
