ADD: I added my linkedin link.

--- a/index-cv.html
+++ b/index-cv.html
@@ -17,6 +17,9 @@
 	<p>Amansia 1450, Jardín del Mar, Viña del Mar, Valparaíso, Chile.</p>
 	<p>17.353.208-3</p>
 
+	<h3> Social Network	</h3>
+	<a href="https://www.linkedin.com/in/franco-mat%C3%ADas-baldassare-rodr%C3%ADguez-2460a977/">My Linkedin</a>
+
 </body>
 
 </>
