ADD: I added the Who am I section

--- a/index-cv.html
+++ b/index-cv.html
@@ -10,15 +10,23 @@
 <body>
 	<h1>Curriculum Vitae</h1>
 
+	<img src="" alt="">
+
 	<h2>Datos Personales</h2>
 	<p>Franco Matías Baldassare Rodríguez</p>
 	<p>francobaldassarerodriguez@gmail.com</p>
 	<p>+56933765766</p>
 	<p>Amansia 1450, Jardín del Mar, Viña del Mar, Valparaíso, Chile.</p>
+	<p>Fecha de Nacimiento</p>
 	<p>17.353.208-3</p>
 
-	<h3> Social Network	</h3>
+	<h3>Redes Sociales</h3>
 	<a href="https://www.linkedin.com/in/franco-mat%C3%ADas-baldassare-rodr%C3%ADguez-2460a977/">My Linkedin</a>
+	
+	<h3>Quién Soy</h3>
+	<p>Soy un diseñador capaz de observar los sucesos de mi entorno y desarrollar el diseño desde nuevos ángulos que evidencien su naturaleza buscando la simpleza y la pulcritud. Además me considero una persona esforzada y bien capacitada para el trabajo en equipo.</p>
+
+	
 
 </body>
 
