ADD: I Added estudios académicos años/institución

--- a/index-cv.html
+++ b/index-cv.html
@@ -17,7 +17,7 @@
 	<p>francobaldassarerodriguez@gmail.com</p>
 	<p>+56933765766</p>
 	<p>Amansia 1450, Jardín del Mar, Viña del Mar, Valparaíso, Chile.</p>
-	<p>Fecha de Nacimiento</p>
+	<p>Fecha de Nacimiento 19 agosto 1989</p>
 	<p>17.353.208-3</p>
 
 	<h3>Redes Sociales</h3>
@@ -26,7 +26,29 @@
 	<h3>Quién Soy</h3>
 	<p>Soy un diseñador capaz de observar los sucesos de mi entorno y desarrollar el diseño desde nuevos ángulos que evidencien su naturaleza buscando la simpleza y la pulcritud. Además me considero una persona esforzada y bien capacitada para el trabajo en equipo.</p>
 
-	
+	<h3>Estudios Académicos</h3>
+	<table style="width:50%">
+	  <tr>
+	    <th>Año</th>
+	    <th>Actividad</th> 
+	  </tr>
+	  <tr>
+	    <td>1993 - 2007</td>
+	    <td>Egresado del Colegio Saint Dominic, Viña del Mar, Chile.</td>
+	  </tr>
+	  <tr>
+	  	<td>2008 - 2009</td>
+	    <td>Periodismo Universidad Adolfo Ibáñez.</td>
+	  </tr>
+	  <tr>
+	  	<td>2010 - 2015</td>
+	    <td>Diseño Gráfico, Pontificia Universidad Católica de Valparaíso.</td>
+	  </tr>
+	  <tr>
+	    <td>2015 - 2016</td>
+	    <td>Teología en la Pontificia Universidad Católica de Santiago.</td>
+	  </tr>
+	</table>
 
 </body>
 
