--- a/index-cv.html
+++ b/index-cv.html
@@ -50,6 +50,40 @@
 	  </tr>
 	</table>
 
+	<h3>Proyectos Académicos</h3>
+	<table style="width:50%">
+		<tr>
+			<th>Año</th>
+			<th>Institución</th>
+			<th>Actividad</th> 
+			<th>Descripción</th>
+		</tr>
+		<tr>
+			<td>2013</td>
+			<td>Bienal de Diseño de Santiago.</td>
+			<td>Ágape inaugural</td>
+			<td>Desarrollo de la gráfica de los soportes del ágape y armado.</td>
+		</tr>
+ 		<tr>
+		  <td>2014</td>
+		  <td>PUCV</td>
+		  <td>Week Calendar</td>
+		  <td>Desarrollo de aplicación basada en UX y desarrollo del front-end.</td>
+		</tr>
+ 		<tr>
+		  <td>2014</td>
+		  <td>PUCV</td>
+		  <td>Proyecto Vergel 439</td>
+		  <td>Desarrollo de sitio web basado en UX, desarrollo front-end y sitio programado.</td>
+		</tr>
+ 		<tr>
+		  <td>2014 - 2015</td>
+		  <td>PUCV</td>
+		  <td>Desarrollo de plataformas webs para el Obispado de Valparaíso y parroquias.</td>
+		  <td>Desarrollo de arquitecturas de información, pruebas de usabilidad, diseño front-end, diseño responsive y escritura del código html y css.</td>
+		</tr>
+	</table>
+
 </body>
 
 </>
