ADD: two tables: first more experience and second work experience.

--- a/index-cv.html
+++ b/index-cv.html
@@ -84,6 +84,44 @@
 		</tr>
 	</table>
 
+	<h3>Más Experiencia</h3>
+	<table style="width:50%">
+		<tr>
+			<th>Año</th>
+			<th>Institución</th>
+			<th>Actividad</th> 
+			<th>Descripción</th>
+		</tr>
+		<tr>
+			<td>2014</td>
+			<td>PUCV</td>
+			<td>PIX Partituras de interacción</td>
+			<td>Workshop de UI</td>
+		</tr>
+ 		<tr>
+		  <td>2018</td>
+		  <td>Desafío Latam</td>
+		  <td>Desarrollador Front-End</td>
+		  <td>Curso de capacitación en desarrollo front-end</td>
+		</tr> 	
+	</table>
+
+	<h3>Experiencia Laboral</h3>
+	<table style="width:50%">
+		<tr>
+			<th>Año</th>
+			<th>Institución</th>
+			<th>Actividad</th> 
+			<th>Descripción</th>
+		</tr>
+		<tr>
+			<td>2017-2018</td>
+			<td>San Roque ONG, San Luis Argentina</td>
+			<td>Diseñador Gráfico & Community Manager</td>
+			<td>Desarrollo de branding, estrategias comunicacionales y desarrollo del material visual.</td>
+		</tr>
+	</table>
+
 </body>
 
 </>
