ADD:Programas y lenguajes, y Otros Idiomas.

--- a/index-cv.html
+++ b/index-cv.html
@@ -51,7 +51,7 @@
 	</table>
 
 	<h3>Proyectos Académicos</h3>
-	<table style="width:50%">
+	<table style="width:100%">
 		<tr>
 			<th>Año</th>
 			<th>Institución</th>
@@ -85,7 +85,7 @@
 	</table>
 
 	<h3>Más Experiencia</h3>
-	<table style="width:50%">
+	<table style="width:100%">
 		<tr>
 			<th>Año</th>
 			<th>Institución</th>
@@ -107,7 +107,7 @@
 	</table>
 
 	<h3>Experiencia Laboral</h3>
-	<table style="width:50%">
+	<table style="width:100%">
 		<tr>
 			<th>Año</th>
 			<th>Institución</th>
@@ -122,6 +122,22 @@
 		</tr>
 	</table>
 
+	<h4>Programas & lenguajes</h4>
+	<ul>
+		<li>Adobe Illustrator</li>
+		<li>Adobe Photoshop</li>
+		<li>Adobe Indesign</li>
+		<li>Adobe Dreamweaver</li>
+		<li>Sublime Text</li>
+		<li>Github</li>
+		<li>Html5 & Css</li>
+	</ul>
+
+	<h4>Otros idiomas</h4>
+	<ul>
+		<li>Español Nativo</li>
+		<li>Inglés: Escrito alto y Oral medio</li>
+	</ul>
 </body>
 
 </>
