--- a/index-cv.html
+++ b/index-cv.html
@@ -4,54 +4,56 @@
 <head>
   <title>CV-Franco-Baldassare</title>
   <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 </head>
 
 <!--Comienza el body, esto será leído por el usuario-->
 <body>
-	<h1>Curriculum Vitae</h1>
+	<h1 style="font-family: Oswald">Curriculum Vitae</h1>
 
-	<img src="" alt="">
+	<img src="images/foto-curriculum-vitae.jpg" width="15%" alt="Currículum Franco Baldassare">
 
-	<h2>Datos Personales</h2>
-	<p>Franco Matías Baldassare Rodríguez</p>
-	<p>francobaldassarerodriguez@gmail.com</p>
-	<p>+56933765766</p>
-	<p>Amansia 1450, Jardín del Mar, Viña del Mar, Valparaíso, Chile.</p>
-	<p>Fecha de Nacimiento 19 agosto 1989</p>
-	<p>17.353.208-3</p>
+	<h2 style="font-family: Oswald">Datos Personales</h2>
+	<p style="font-family: Dosis">Franco Matías Baldassare Rodríguez</p>
+	<p style="font-family: Dosis">francobaldassarerodriguez@gmail.com</p>
+	<p style="font-family: Dosis">+56933765766</p>
+	<p style="font-family: Dosis">Amansia 1450, Jardín del Mar, Viña del Mar, Valparaíso, Chile.</p>
+	<p style="font-family: Dosis">Fecha de Nacimiento 19 agosto 1989</p>
+	<p style="font-family: Dosis">17.353.208-3</p>
 
-	<h3>Redes Sociales</h3>
-	<a href="https://www.linkedin.com/in/franco-mat%C3%ADas-baldassare-rodr%C3%ADguez-2460a977/">My Linkedin</a>
+	<h3 style="font-family: Oswald">Redes Sociales</h3>
+	<a href="https://www.linkedin.com/in/franco-mat%C3%ADas-baldassare-rodr%C3%ADguez-2460a977/" style="font-family: Dosis">My Linkedin</a>
 	
-	<h3>Quién Soy</h3>
-	<p>Soy un diseñador capaz de observar los sucesos de mi entorno y desarrollar el diseño desde nuevos ángulos que evidencien su naturaleza buscando la simpleza y la pulcritud. Además me considero una persona esforzada y bien capacitada para el trabajo en equipo.</p>
+	<h3 style="font-family: Oswald">Quién Soy</h3>
+	<p style="font-family: Dosis">Soy un diseñador capaz de observar los sucesos de mi entorno y desarrollar el diseño desde nuevos ángulos que evidencien su naturaleza buscando la simpleza y la pulcritud. Además me considero una persona esforzada y bien capacitada para el trabajo en equipo.</p>
 
-	<h3>Estudios Académicos</h3>
-	<table style="width:50%">
+	<h3 style="font-family: Oswald">Estudios Académicos</h3>
+	<table style="font-family: Dosis" style="width:100%">
 	  <tr>
 	    <th>Año</th>
 	    <th>Actividad</th> 
 	  </tr>
 	  <tr>
-	    <td>1993 - 2007</td>
+	    <td>1993-2007</td>
 	    <td>Egresado del Colegio Saint Dominic, Viña del Mar, Chile.</td>
 	  </tr>
 	  <tr>
-	  	<td>2008 - 2009</td>
+	  	<td>2008-2009</td>
 	    <td>Periodismo Universidad Adolfo Ibáñez.</td>
 	  </tr>
 	  <tr>
-	  	<td>2010 - 2015</td>
+	  	<td>2010-2015</td>
 	    <td>Diseño Gráfico, Pontificia Universidad Católica de Valparaíso.</td>
 	  </tr>
 	  <tr>
-	    <td>2015 - 2016</td>
+	    <td>2015-2016</td>
 	    <td>Teología en la Pontificia Universidad Católica de Santiago.</td>
 	  </tr>
 	</table>
 
-	<h3>Proyectos Académicos</h3>
-	<table style="width:100%">
+	<h3 style="font-family: Oswald">Proyectos Académicos</h3>
+	<table style="font-family: Dosis" style="width:100%">
 		<tr>
 			<th>Año</th>
 			<th>Institución</th>
@@ -77,15 +79,15 @@
 		  <td>Desarrollo de sitio web basado en UX, desarrollo front-end y sitio programado.</td>
 		</tr>
  		<tr>
-		  <td>2014 - 2015</td>
+		  <td>2014-2015</td>
 		  <td>PUCV</td>
 		  <td>Desarrollo de plataformas webs para el Obispado de Valparaíso y parroquias.</td>
 		  <td>Desarrollo de arquitecturas de información, pruebas de usabilidad, diseño front-end, diseño responsive y escritura del código html y css.</td>
 		</tr>
 	</table>
 
-	<h3>Más Experiencia</h3>
-	<table style="width:100%">
+	<h3 style="font-family: Oswald">Más Experiencia</h3>
+	<table style="font-family: Dosis" style="width:100%">
 		<tr>
 			<th>Año</th>
 			<th>Institución</th>
@@ -106,8 +108,8 @@
 		</tr> 	
 	</table>
 
-	<h3>Experiencia Laboral</h3>
-	<table style="width:100%">
+	<h3 style="font-family: Oswald">Experiencia Laboral</h3>
+	<table style="font-family: Dosis" style="width:100%">
 		<tr>
 			<th>Año</th>
 			<th>Institución</th>
@@ -122,8 +124,8 @@
 		</tr>
 	</table>
 
-	<h4>Programas & lenguajes</h4>
-	<ul>
+	<h4 style="font-family: Oswald">Programas & lenguajes</h4>
+	<ul style="font-family: Dosis">
 		<li>Adobe Illustrator</li>
 		<li>Adobe Photoshop</li>
 		<li>Adobe Indesign</li>
@@ -131,13 +133,19 @@
 		<li>Sublime Text</li>
 		<li>Github</li>
 		<li>Html5 & Css</li>
-	</ul>
+	</ul style="font-family: Dosis">
 
-	<h4>Otros idiomas</h4>
-	<ul>
+	<h4 style="font-family: Oswald">Otros idiomas</h4>
+	<ul style="font-family: Dosis">
 		<li>Español Nativo</li>
 		<li>Inglés: Escrito alto y Oral medio</li>
-	</ul>
+	</ul style="font-family: Dosis">
+	
+	<h4 style="font-family: Oswald">Portafolio</h4>
+	<a href="https://issuu.com/francobaldassare/docs/portafolio_franco_baldassare_2018" style="font-family: Dosis"> Portafolio 2018</a>
+	<br>
+	<br>
+	<!--aquí va el mapa de mi ubicación-->
+	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3346.8467500624506!2d-71.53540628531256!3d-32.981444780910714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9689dda91afa9b33%3A0xaade06bfb5c077cb!2sAmansia+1450%2C+Vi%C3%B1a+del+Mar%2C+Regi%C3%B3n+de+Valpara%C3%ADso!5e0!3m2!1ses-419!2scl!4v1536765150201" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </body>
-
-</>
+</html>
