ADD: Margin 3% to the body

--- a/index-cv.html
+++ b/index-cv.html
@@ -9,7 +9,7 @@
 </head>
 
 <!--Comienza el body, esto será leído por el usuario-->
-<body>
+<body style="margin:3%">
 	<h1 style="font-family: Oswald">Curriculum Vitae</h1>
 
 	<img src="images/foto-curriculum-vitae.jpg" width="15%" alt="Currículum Franco Baldassare">
